--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ defusedxml==0.5.0
 Django==2.1.5
 django-allauth==0.37.1
 django-cors-headers==2.4.0
+django-heroku==0.3.1
 django-rest-auth==0.9.3
 djangorestframework==3.8.2
 gunicorn==19.7.1
